# IU_Compilulki_Compiler

./: .gitignore  CMakeLists.txt  README.md  bool_array.ll  bool_list.ll  boolean.ll  int_array.ll  int_list.ll  integer.ll  memory.ll  opt.ll  output  output.ll  real.ll  tree.dot  ttt  ttt.ll
examples/OOP/: base_derived.lexer  base_derived.olang  base_derived.semantics  constuctors.lexer  constuctors.olang  constuctors.semantics  constuctors.syntax  counter.lexer  counter.olang  counter.semantics  counter.syntax  encapsulation.lexer  encapsulation.olang  encapsulation.semantics  encapsulation.syntax  inheritance+polymorphism.lexer  inheritance+polymorphism.olang  inheritance+polymorphism.semantics  inheritance+polymorphism.syntax  overloading.lexer  overloading.olang  overloading.semantics  overloading.syntax  simple_inheritance.lexer  simple_inheritance.olang
examples/algorithms/: decimal_to_binary.lexer  decimal_to_binary.olang  decimal_to_binary.semantics  decimal_to_binary.syntax  eratosthenes_sieve.lexer  eratosthenes_sieve.olang  eratosthenes_sieve.semantics  eratosthenes_sieve.syntax  matrix_multiplication.lexer  matrix_multiplication.olang  matrix_multiplication.semantics  matrix_multiplication.syntax  sorting+inheritance.lexer  sorting+inheritance.olang  sorting+inheritance.semantics  sorting+inheritance.syntax
examples/errors/: ce_and.lexer  ce_and.olang  ce_if_else.lexer  ce_if_else.olang  ce_is_positive.lexer  ce_is_positive.olang  ce_multiply.lexer  ce_multiply.olang  ce_zero_division.lexer  ce_zero_division.olang  class_redeclaration.lexer  class_redeclaration.olang  class_redeclaration.syntax  method_redeclaration.lexer  method_redeclaration.olang  method_redeclaration.semantics  not_existent_class_declaration.lexer  not_existent_class_declaration.olang  not_existent_class_declaration.syntax  primary_type_error.lexer  primary_type_error.olang  primary_type_error.semantics  primary_type_error.syntax  redeclaration.lexer  redeclaration.olang  redeclaration.syntax  undeclared_class.lexer  undeclared_class.olang  undeclared_class.syntax  undeclared_method.lexer  undeclared_method.olang  undeclared_method.semantics  undeclared_method.syntax  undeclared_var.lexer  undeclared_var.olang  undeclared_var.syntax  var_redeclaration.lexer  var_redeclaration.olang  var_redeclaration.syntax
examples/optimizations/: if_simplification.lexer  if_simplification.olang  if_simplification.semantics  if_simplification.syntax  return_simplification.lexer  unreachable_code.olang  unreachable_code.semantics  unreachable_code.syntax  unused_variable.lexer  unused_variable.olang  unused_variable.semantics  unused_variable.syntax
examples/simple/: if_test.olang  (+1 more)
grammar/: grammar.txt
src/: main.cpp  main.h
std/: boolean.ll  integer.ll  real.ll  real_array.ll  real_list.ll
tests/: output.ll  test.bat  test.sh  test_hash_function.cpp
(+78 files in other folders)
